fix(spotbugs): correction ChatAgent (pas de stockage de Memory externe, getter sûr, format %n)